fix select companies on sidenav

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
 
   <div class="jumbotron">
     <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
