--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
 
     <form autocomplete="off" class="form-container m-3" ngNativeValidate [formGroup]="forma"
         (ngSubmit)="registrarUsuario()" id="loginform" action="index.html">
