--- a/src/app/pages/user/home-user/home-user.component.html
+++ b/src/app/pages/user/home-user/home-user.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
+<div class="animated fadeIn" style="min-width: 18rem; max-width: 30rem;">
 
   <div *ngIf="!showIntro">
     <div class="jumbotron m-1 animated fadeIn">
