--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
         </app-chat>
     </mat-drawer>
 
-    <router-outlet></router-outlet>
+    <div style="text-align: -webkit-center;">
+        <router-outlet></router-outlet>
+    </div>
 
 </mat-drawer-container>
