--- a/src/app/pages/user/companies/companies.component.html
+++ b/src/app/pages/user/companies/companies.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;text-align: -webkit-center;">
+<div class="animated fadeIn p-2" style="min-width: 18rem; max-width: 30rem;">
 
     <div class="card bg-success lead text-white">
         <div class="card-header">Empresas</div>
