--- a/src/app/pages/user/home-user/home-user.component.html
+++ b/src/app/pages/user/home-user/home-user.component.html
@@ -11,8 +11,8 @@
       <p *ngIf="userService.user.id_company" class="card-text"> Web Pública
 
         <a target="_blank"
-          href="http://webturnos.herokuapp.com/#/public/{{userService.user.id_company.tx_public_name}}">
-          http://webturnos.herokuapp.com/#/public/{{userService.user.id_company.tx_public_name}}
+          href="https://saturno.live/#/public/{{userService.user.id_company.tx_public_name}}">
+          https://saturno.live/#/public/{{userService.user.id_company.tx_public_name}}
         </a>
       </p>
     </div>
