--- a/src/app/pages/assistant/home/home.component.html
+++ b/src/app/pages/assistant/home/home.component.html
@@ -4,12 +4,20 @@
 
         <p class="lead">Bienvenido, desde aquí puede tomar escritorios y atender turnos.</p>
 
-        <!-- no desktops -->
-        <div *ngIf="desktops?.length === 0" class="card bg-danger text-white p-2 my-4">
-            La empresa seleccionada no tiene escritorios creados.
+        <!-- no company -->
+        <div *ngIf="!userService.user.id_company" class="card lead bg-danger text-warning p-3 my-4"
+            style="line-height: initial;">
+            No tiene asignada ningúna empresa. Debe seleccionarla desde el menú prinicpal. Si no tiene empresas creadas
+            debe crearlas desde el menú de "Usuario".
         </div>
 
-        <div *ngIf="desktops?.length > 0">
+        <!-- no desktops -->
+        <div *ngIf="desktops?.length === 0" class="card lead bg-danger text-warning p-3 my-4"
+            style="line-height: initial;">
+            No tiene escritorios creados. Debe darlos de alta desde el Menú de Usuario.
+        </div>
+
+        <div *ngIf="desktops?.length > 0 && userService.user.id_company?._id">
 
             <div class="my-4" *ngIf="myDesktop">
 
@@ -22,6 +30,11 @@
                 </div>
 
             </div>
+
+
+            <!-- ======================================================== -->
+            <!-- TAKE / RELEASE DESKTOP -->
+            <!-- ======================================================== -->
 
             <div class="my-4" *ngIf="!myDesktop">
                 <div *ngIf="desktopsAvailable.length === 0" class="card bg-danger text-white p-2 my-4">
@@ -48,12 +61,35 @@
                 </div>
             </div>
 
-            <div *ngFor="let desktop of desktops">
-                <div *ngIf="desktop.id_assistant">
-                    Escritorio {{desktop.cd_desktop}} tomado por {{desktop.id_assistant?.tx_name}}
-                </div>
-                <div *ngIf="!desktop.id_assistant">
-                    Escritorio {{desktop.cd_desktop}} libre
+            <!-- ======================================================== -->
+            <!-- DESKTOPS TABLE -->
+            <!-- ======================================================== -->
+
+            <div class="card bg-primary mb-4" style="min-width: 18rem; max-width: 30rem; font-size: large; font-weight: lighter;">
+                <div class="card-content table-responsive-sm  p-2">
+
+                    <table class="table table-sm text-white text-center">
+
+                        <tr style="border-top: 0px; color: yellow;">
+                            <td style="text-align: left; border: none;"> Escritorio </td>
+                            <td style="text-align: right; border: none;"> Asistente </td>
+                        </tr>
+
+                        <tr *ngFor="let desktop of desktops">
+                            <td style="text-align: left;">
+                                {{desktop.cd_desktop}}
+                            </td>
+                            <td style="text-align: right;">
+                                <div *ngIf="desktop.id_assistant">
+                                    {{desktop.id_assistant?.tx_name}}
+                                </div>
+                                <div *ngIf="!desktop.id_assistant" style="color: limegreen;">
+                                    Disponible
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+
                 </div>
             </div>
 
