--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -156,7 +156,11 @@
           </table>
 
         </mat-radio-group>
-
+        <div class="m-3 float-right">
+          <mat-label class="mx-2">Prioritario</mat-label>
+          <mat-slide-toggle [(ngModel)]="blPriority"></mat-slide-toggle>
+        </div>
+  
       </div>
     </div>
   </div>
